Updated css to prevent usernames from overflowing.

--- a/SimpleForum.Web/wwwroot/css/site.css
+++ b/SimpleForum.Web/wwwroot/css/site.css
@@ -298,6 +298,8 @@ textarea:focus, input:focus {
   text-align: center;
   text-decoration: none;
   color: royalblue;
+  max-width: 80%;
+  word-break: break-word;
 }
 
 .post-profile-img {
